# python-workspace

./: Pipfile  README.md  main.py  pyproject.toml
algorithms/search/: binary.py
src/: __init__.py
tests/: test_sum.py  test_version.py
