[tool.poetry]
name = "python-workspace"
version = "0.1.0"
description = "A python playground workspace"
authors = ["Amitesh Rai <amiteshrai@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["Python", "Modern Python"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
