[tool.poetry]
name = "python-workspace"
version = "0.1.0"
description = "A python playground workspace"
authors = ["Amitesh Rai <amiteshrai@outlook.com>"]
license = "MIT"
readme = "README.md"
keywords = ["Python", "Modern Python"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.25.1"
click = "^8.0.1"
httpx = "^0.18.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black = "^21.5b1"
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.5"}
pytest-cov = "^2.12.0"
pytest-mock = "^3.6.1"
pylint = "^2.8.2"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = []
